--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -17,6 +17,7 @@ body {
 
 img {
   border-radius: 10%;
+  width: 35%;
 }
 
 a {
@@ -65,9 +66,11 @@ a {
     justify-content: center;
     margin-top: 30px;
 
-    img {
-      width: 50%;
-    }
+    // img {
+    //   width: 60px;
+    //   height: 60px;
+    //   border-radius: 10%;
+    // }
 
     h1 {
       font-size: 50px;
