--- a/public/scss/_config.scss
+++ b/public/scss/_config.scss
@@ -1,4 +1,5 @@
 $font-stack: Trebuchet MS, Arial, sans-serif;
 $light-color: #ffffff;
-$primary-color: #ffef0a;
+$primary-color: #fff568;
 $secondary-color: #000000;
+$hover-color: purple;
