--- a/public/scss/_config.scss
+++ b/public/scss/_config.scss
@@ -1,5 +1,5 @@
 $font-stack: Trebuchet MS, Arial, sans-serif;
 $light-color: #ffffff;
-$primary-color: #fff568;
+$primary-color: #f9a602;
 $secondary-color: #000000;
 $hover-color: purple;
