--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,10 @@ a {
   width: 1.6em;
 }
 
+.profile_pic {
+  width: 20%;
+}
+
 .App {
   background-color: #f9a602;
   color: text-color-picker(#f9a602);
